{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 717,
  "lineage": "dcd8a916-66ea-d826-9333-b75d3cbd202b",
  "resources": [
    {
      "module": "module.cloud-nat",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-19T00:58:05.185-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gcp-2021-2-bookshelf-kumar-tf/regions/us-central1/routers/bookshelf-nat-router",
            "name": "bookshelf-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/networks/custom-vpc",
            "project": "gcp-2021-2-bookshelf-kumar-tf",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/regions/us-central1/routers/bookshelf-nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_network.google_compute_firewall.allow_lb_health_check",
            "module.vpc_network.google_compute_firewall.allow_ssh",
            "module.vpc_network.google_compute_network.vpc_network",
            "module.vpc_network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "gcp-2021-2-bookshelf-kumar-tf/us-central1/bookshelf-nat-router/bookshelf-nat-config",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "bookshelf-nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gcp-2021-2-bookshelf-kumar-tf",
            "region": "us-central1",
            "router": "bookshelf-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.cloud-nat.google_compute_router.router",
            "module.vpc_network.google_compute_firewall.allow_lb_health_check",
            "module.vpc_network.google_compute_firewall.allow_ssh",
            "module.vpc_network.google_compute_network.vpc_network",
            "module.vpc_network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.cloud_sql",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_alloc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.185.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-06-19T00:57:48.349-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/gcp-2021-2-bookshelf-kumar-tf/global/addresses/google-managed-services-default",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "google-managed-services-default",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/networks/custom-vpc",
            "prefix_length": 16,
            "project": "gcp-2021-2-bookshelf-kumar-tf",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/addresses/google-managed-services-default",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "app_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/regions/us-central1/instanceGroups/bookshelf-managed-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-06-19T01:05:41.671-07:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "sf7eYvAZ87Q=",
            "generated_id": 1256671579492743738,
            "health_checks": [
              "projects/gcp-2021-2-bookshelf-kumar-tf/global/healthChecks/bookshelf-health-check"
            ],
            "id": "projects/gcp-2021-2-bookshelf-kumar-tf/global/backendServices/bookshelf-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "bookshelf-backend-service",
            "port_name": "http",
            "project": "gcp-2021-2-bookshelf-kumar-tf",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/backendServices/bookshelf-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.app_server.google_compute_region_instance_group_manager.appserver",
            "module.cloud_sql.google_compute_global_address.private_ip_alloc",
            "module.cloud_sql.google_service_networking_connection.private_vpc_connection",
            "module.cloud_sql.google_sql_database_instance.bookshelf_mysql_instance",
            "module.health_check.google_compute_health_check.bookshelf_health_check",
            "module.instance_template.google_compute_instance_template.instance_template",
            "module.vpc_network.google_compute_network.vpc_network",
            "module.vpc_network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.120.106.198",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-06-19T00:57:36.357-07:00",
            "description": "Static global external IP for my application",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/gcp-2021-2-bookshelf-kumar-tf/global/addresses/lb-external-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "lb-external-ip",
            "prefix_length": 0,
            "project": "gcp-2021-2-bookshelf-kumar-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/addresses/lb-external-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 4285464834251586518,
            "id": "projects/gcp-2021-2-bookshelf-kumar-tf/global/forwardingRules/bookshelf-lb-forwarding-rule",
            "ip_address": "34.120.106.198",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "bookshelf-lb-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "gcp-2021-2-bookshelf-kumar-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/forwardingRules/bookshelf-lb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/targetHttpProxies/bookshelf-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.app_server.google_compute_region_instance_group_manager.appserver",
            "module.cloud_sql.google_compute_global_address.private_ip_alloc",
            "module.cloud_sql.google_service_networking_connection.private_vpc_connection",
            "module.cloud_sql.google_sql_database_instance.bookshelf_mysql_instance",
            "module.health_check.google_compute_health_check.bookshelf_health_check",
            "module.instance_template.google_compute_instance_template.instance_template",
            "module.load_balancer.google_compute_backend_service.app_backend",
            "module.load_balancer.google_compute_global_address.external_ip",
            "module.load_balancer.google_compute_target_http_proxy.app_http_proxy",
            "module.load_balancer.google_compute_url_map.app_url_map",
            "module.vpc_network.google_compute_network.vpc_network",
            "module.vpc_network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "app_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-19T01:07:09.217-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/gcp-2021-2-bookshelf-kumar-tf/global/targetHttpProxies/bookshelf-http-proxy",
            "name": "bookshelf-http-proxy",
            "project": "gcp-2021-2-bookshelf-kumar-tf",
            "proxy_bind": false,
            "proxy_id": 1354858208371309506,
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/targetHttpProxies/bookshelf-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/urlMaps/bookshelf-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.app_server.google_compute_region_instance_group_manager.appserver",
            "module.cloud_sql.google_compute_global_address.private_ip_alloc",
            "module.cloud_sql.google_service_networking_connection.private_vpc_connection",
            "module.cloud_sql.google_sql_database_instance.bookshelf_mysql_instance",
            "module.health_check.google_compute_health_check.bookshelf_health_check",
            "module.instance_template.google_compute_instance_template.instance_template",
            "module.load_balancer.google_compute_backend_service.app_backend",
            "module.load_balancer.google_compute_url_map.app_url_map",
            "module.vpc_network.google_compute_network.vpc_network",
            "module.vpc_network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "app_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-19T01:06:56.950-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/backendServices/bookshelf-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "wE-UJ-fACoI=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/gcp-2021-2-bookshelf-kumar-tf/global/urlMaps/bookshelf-url-map",
            "map_id": 223735857519950799,
            "name": "bookshelf-url-map",
            "path_matcher": [],
            "project": "gcp-2021-2-bookshelf-kumar-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/urlMaps/bookshelf-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.app_server.google_compute_region_instance_group_manager.appserver",
            "module.cloud_sql.google_compute_global_address.private_ip_alloc",
            "module.cloud_sql.google_service_networking_connection.private_vpc_connection",
            "module.cloud_sql.google_sql_database_instance.bookshelf_mysql_instance",
            "module.health_check.google_compute_health_check.bookshelf_health_check",
            "module.instance_template.google_compute_instance_template.instance_template",
            "module.load_balancer.google_compute_backend_service.app_backend",
            "module.vpc_network.google_compute_network.vpc_network",
            "module.vpc_network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_lb_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-19T00:57:48.306-07:00",
            "deny": [],
            "description": "Allow health-check from Load Balancer",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-2021-2-bookshelf-kumar-tf/global/firewalls/allow-lb-health-check",
            "log_config": [],
            "name": "allow-lb-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/networks/custom-vpc",
            "priority": 1000,
            "project": "gcp-2021-2-bookshelf-kumar-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/firewalls/allow-lb-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "lb-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-19T00:57:48.512-07:00",
            "deny": [],
            "description": "Allow SSH from IAP",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-2021-2-bookshelf-kumar-tf/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/networks/custom-vpc",
            "priority": 1000,
            "project": "gcp-2021-2-bookshelf-kumar-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/firewalls/allow-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "lb-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gcp-2021-2-bookshelf-kumar-tf/global/networks/custom-vpc",
            "mtu": 0,
            "name": "custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "267917202546392095",
            "numeric_id": "267917202546392095",
            "project": "gcp-2021-2-bookshelf-kumar-tf",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/networks/custom-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-19T00:57:48.300-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.1.0.1",
            "id": "projects/gcp-2021-2-bookshelf-kumar-tf/regions/us-central1/subnetworks/custom-vpc-subnet",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "custom-vpc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/global/networks/custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-2021-2-bookshelf-kumar-tf",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2021-2-bookshelf-kumar-tf/regions/us-central1/subnetworks/custom-vpc-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1195002025285155859
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}